--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <script src="js/main.js" async defer></script> -->
+    <script src="js/main.js" async defer></script>
   </body>
 </html>
